--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==3.0.3
 Flask_Cors==5.0.0
 numpy==2.1.2
 pandas==2.2.3
+gunicorn
 # argon2-cffi==20.1.0
 # async-generator==1.10
 # attrs==20.3.0
